kubernetes/apps/glance/glance/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.33.2/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name glance
  namespace: glance
  labels:
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
    spec:
      serviceAccountName: *name
      containers:
        - name: *name
          image: "glanceapp/glance:v0.8.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: glance-config
              mountPath: /app/config
      volumes:
        - name: glance-config
          configMap:
            name: glance-config
