kubernetes/apps/glance/glance/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
  labels:
    app.kubernetes.io/name: glance
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: glance
