kubernetes/apps/glance/glance/app/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance
  namespace: glance
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.lorenzolab.com`)
      services:
        - name: glance
          port: 8080
      middlewares:
        - name: auth-authentik@kubernetescrd
  tls:
    secretName: glance-certificate-secret
